limit hostname width to avoid jumping when switching between servers

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -75,6 +75,13 @@ html, body {
     border-radius: 3px;
 }
 
+#content-navbar-hostname {
+    width: 248px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap
+}
+
 /* Style a button group */
 
 .navbar-primary .btn-group {
